implemented verify accounts endpoint
